# mac-reversing-station

./: .gitignore  README.md  SHAKEDOWN_NOTES.md  test_validate_workstation_bundles.py
Skills/: README.md
cursor/: README.repo-mode-snippet.md  rule-engineering.mdc  skill-link.sh
docs/: operator-guide.md  topology.md
ghidra-scripts/: README.md  _re_lib.py  dump_objc_protocols.py  dump_xpc_listeners.py  export_lldb_anchors.py  scan_catalyst_porting_gap.py  scan_defaults_bypass.py  scan_endpoint_security_client.py  scan_flags_zero.py  scan_iokit_user_clients.py  scan_launchd_machservice_topology.py  scan_persistent_authorization.py  scan_private_framework_dependency.py  scan_privileged_helper_surface.py  scan_system_extension_surface.py  scan_tcc_prompt_surface.py  scan_url_scheme_handlers.py  scan_wrong_door.py  scan_xpc_client_validation.py
macre-vm-mcp/: README.md  pyproject.toml
macre-vm-mcp/src/macre_vm_mcp/: __init__.py  __main__.py  _proc.py  server.py  tools_codesign.py  tools_dtrace.py  tools_lldb.py  tools_system.py
macre-vm-mcp/tests/: test_parsers.py  test_server_smoke.py
scripts/: configure-claude-code-mcp.py  configure-cursor-mcp.py  deploy-macre-vm-mcp.sh  enumerate-bundle-binaries.sh  extract-asar.js  extract-asar.sh  fetch-apple-source.py  ghidra-scan.sh  ghidra-watch.sh  init-project.sh  install-disposable-sudoers.sh  install-ghidra-host.sh  install-skills-symlink.sh  install-vm-ssh-key.sh  lab-health.sh  rsync-to-vm.sh  setup-keep.sh  skill-link-claude-code.sh  smoke-wave2.sh  smoke-wave3.sh  start-target.py  triage.py  validate-recipes.py  (+1 more)
(+117 files in other folders)
